Add default GC options for flink on yarn to facilitate debugging
Support for all deployment options(Yarn,Mesos,Standalone)

Update flink-dist/src/main/flink-bin/mesos-bin/mesos-taskmanager.sh

Co-Authored-By: Till Rohrmann <till.rohrmann@gmail.com>

Update flink-dist/src/main/flink-bin/mesos-bin/mesos-taskmanager.sh

Co-Authored-By: Till Rohrmann <till.rohrmann@gmail.com>

Update flink-runtime/src/main/java/org/apache/flink/runtime/clusterframework/BootstrapTools.java

Co-Authored-By: Till Rohrmann <till.rohrmann@gmail.com>

Update scripts for standalone/mesos