@@ -113,6 +113,9 @@ DEFAULT_ENV_JAVA_OPTS_HS=""                         # Optional JVM args (History
 DEFAULT_ENV_SSH_OPTS=""                             # Optional SSH parameters running in cluster mode
 DEFAULT_YARN_CONF_DIR=""                            # YARN Configuration Directory, if necessary
 DEFAULT_HADOOP_CONF_DIR=""                          # Hadoop Configuration Directory, if necessary
+DEFAULT_JVM_HEAPDUMP_ON_OOM="true"                  # Whether enable heap dump on ooms
+DEFAULT_JVM_HEAPDUMP_DIRECTORY="/tmp"               # Heap dump directory
+DEFAULT_JVM_GC_LOGGING="false"                      # Whether enable gc logging
 
 ########################################################################################################################
 # CONFIG KEYS: The default values can be overwritten by the following keys in conf/flink-conf.yaml
@@ -136,6 +139,9 @@ KEY_ENV_JAVA_OPTS_HS="env.java.opts.historyserver"
 KEY_ENV_SSH_OPTS="env.ssh.opts"
 KEY_HIGH_AVAILABILITY="high-availability"
 KEY_ZK_HEAP_MB="zookeeper.heap.mb"
+KEY_JVM_GC_LOGGING="jvm.gc-logging"
+KEY_JVM_HEAPDUMP_ON_OOM="jvm.heapdump-on-oom"
+KEY_JVM_HEAPDUMP_DIRECTORY="jvm.heapdump.directory"
 
 ########################################################################################################################
 # MEMORY SIZE UNIT
@@ -430,6 +436,24 @@ if [ -z "${FLINK_ENV_JAVA_OPTS_HS}" ]; then
     FLINK_ENV_JAVA_OPTS_HS="$( echo "${FLINK_ENV_JAVA_OPTS_HS}" | sed -e 's/^"//'  -e 's/"$//' )"
 fi
 
+if [ -z "${FLINK_JVM_GC_LOGGING}" ];then
+    FLINK_JVM_GC_LOGGING=$(readFromConfig ${KEY_JVM_GC_LOGGING} "${DEFAULT_JVM_GC_LOGGING}" "${YAML_CONF}")
+    # Remove leading and ending double quotes (if present) of value
+    FLINK_JVM_GC_LOGGING="$( echo "${FLINK_JVM_GC_LOGGING}" | sed -e 's/^"//'  -e 's/"$//' )"
+fi
+
+if [ -z "${FLINK_JVM_HEAPDUMP_ON_OOM}" ];then
+    FLINK_JVM_HEAPDUMP_ON_OOM=$(readFromConfig ${KEY_JVM_HEAPDUMP_ON_OOM} "${DEFAULT_JVM_HEAPDUMP_ON_OOM}" "${YAML_CONF}")
+    # Remove leading and ending double quotes (if present) of value
+    FLINK_JVM_HEAPDUMP_ON_OOM="$( echo "${FLINK_JVM_HEAPDUMP_ON_OOM}" | sed -e 's/^"//'  -e 's/"$//' )"
+fi
+
+if [ -z "${FLINK_JVM_HEAPDUMP_DIRECTORY}" ];then
+    FLINK_JVM_HEAPDUMP_DIRECTORY=$(readFromConfig ${KEY_JVM_HEAPDUMP_DIRECTORY} "${DEFAULT_JVM_HEAPDUMP_DIRECTORY}" "${YAML_CONF}")
+    # Remove leading and ending double quotes (if present) of value
+    FLINK_JVM_HEAPDUMP_DIRECTORY="$( echo "${FLINK_JVM_HEAPDUMP_DIRECTORY}" | sed -e 's/^"//'  -e 's/"$//' )"
+fi
+
 if [ -z "${FLINK_SSH_OPTS}" ]; then
     FLINK_SSH_OPTS=$(readFromConfig ${KEY_ENV_SSH_OPTS} "${DEFAULT_ENV_SSH_OPTS}" "${YAML_CONF}")
 fi
@@ -460,7 +484,7 @@ fi
 # DO NOT USE FOR MEMORY SETTINGS! Use conf/flink-conf.yaml with keys
 # KEY_JOBM_MEM_SIZE and TaskManagerOptions#TOTAL_PROCESS_MEMORY for that!
 if [ -z "${JVM_ARGS}" ]; then
-    JVM_ARGS=""
+    JVM_ARGS=()
 fi
 
 # Check if deprecated HADOOP_HOME is set, and specify config path to HADOOP_CONF_DIR if it's empty.
@@ -645,4 +669,35 @@ extractExecutionParams() {
     fi
 
     echo ${execution_config} | sed "s/$EXECUTION_PREFIX//"
+}
+
+# Format default gc logging options
+setGCLoggingOpts() {
+    local gclog=$1
+    FLINK_JVM_GC_LOGGING_OPTS=()
+    if [ ${FLINK_JVM_GC_LOGGING} = true ];then
+        FLINK_JVM_GC_LOGGING_OPTS=(
+          "-Xloggc:${gclog}"
+          "-XX:+PrintGCApplicationStoppedTime"
+          "-XX:+PrintGCDetails"
+          "-XX:+PrintGCDateStamps"
+          "-XX:+UseGCLogFileRotation"
+          "-XX:NumberOfGCLogFiles=10"
+          "-XX:GCLogFileSize=10M"
+          "-XX:+PrintPromotionFailure"
+          "-XX:+PrintGCCause")
+    fi
+}
+
+# Format default heapdump options
+setHeapdumpOpts() {
+    local dump_dest_name=$1
+    local log=$2
+    FLINK_JVM_HEAPDUMP_OPTS=()
+    if [ ${FLINK_JVM_HEAPDUMP_ON_OOM} = true ];then
+        FLINK_JVM_HEAPDUMP_OPTS=(
+          "-XX:+HeapDumpOnOutOfMemoryError"
+          "-XX:HeapDumpPath=${FLINK_JVM_HEAPDUMP_DIRECTORY}/$dump_dest_name"
+          "-XX:OnOutOfMemoryError=printf '%s\n' 'OutOfMemoryError! Killing current process %p...' 'Check gc logs and heapdump file(${FLINK_JVM_HEAPDUMP_DIRECTORY}/$dump_dest_name) for details.' > ${log}; kill -9 %p")
+    fi
 }
